--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Netchom</title>
+  <link rel="stylesheet" href="./css/main.scss">
 </head>
 
 <body>
   Hello World!
-  test
 </body>
 
 </html>
